log/build_2023-11-16_13-39-57/mypkg/stderr.log
  File "/home/raisu/ros2_ws/src/mypkg/install/mypkg/lib/python3.8/site-packages/mypkg/listener.py", line 3
    from std_msgs.msg import Int 16
                                 ^
SyntaxError: invalid syntax

